# allotaxonometer-ui

./: .gitignore  README.md  package.json  vite.config.js  vite.config.ts  vite.ssr.config.js
dev/: App.svelte  index.html  main.js  package.json  testData.js  tsconfig.json  vite.config.js
dev/apps/: BitsuiApp.svelte  ClassApp.svelte  DashApp.svelte  DiamondState.svelte.ts  ShadcnApp.svelte  Sidebar.svelte  VanillaApp.svelte  state.svelte.ts
dev/apps/sidebar/: AlphaControl.svelte  LabelThresholdControl.svelte
dev/src/: App.svelte
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/lib/: index.ts
src/lib/components/Dashboard/: Dashboard.svelte  index.ts
src/lib/components/Diamond/: AxisX.svelte  AxisY.svelte  Contours.svelte  Diamond.svelte  Grid.svelte  index.ts
src/lib/styles/: styleHelpers.js  variables.css
src/lib/utils/: aesthetics.js  allotaxonograph.svelte.ts  allotaxonograph.ts  combine_distributions.js  css-generator.js  diamond_count.js  index.ts  rank_turbulence_divergence.js  utils_helpers.js
tests/: DashboardClient.test.js  DashboardSSR.test.js  allotaxonograph-wasm-bug.test.js  build-check.test.js  optional-fields.test.js  performance-profile.test.js  setup.js  ssr.test.js  utils-library.test.js  utils.test.js  wasm-map-fix.test.js
tests/components/: Dashboard.test.js  Diamond.test.js  DivergingBarChart.test.js  Legend.test.js  Wordshift.test.js
tests/fixtures/: testData.js
tests/integration/: FullPipeline.test.js
tests/optimizations/: combElems.test.js  diamond-count.test.js  matlab-sort.test.js  rin.test.js  tiedrank.test.js
(+8 files in other folders)
